@@ -23,6 +23,7 @@ David Foerster
 Mirko Friedenhagen
 Martin von Gagern
 Guillermo Gonzalez
+Ted Gould
 Mark Hammond
 Wouter van Heyst
 Michael Hudson
@@ -37,6 +38,7 @@ John Arbash Meinel
 Stefan Metzmacher
 Andrew Mitchell
 Gustavo Niemeyer
+Matt Nordhoff
 Martin Pool
 Garrett Rooney
 Jean-Francois Roy
